---------------------------------------------------------------------------------------------------
Version: 0.5.12
Date: ???
  Changes:
    - Added tech Steam power #271
    - Marked Alien Biomes mod as incompatible #263
    - Marked Angel's Exploration mod as incompatible #264
    - Reduced the cost of Circuit wires #286
    - Added Thermal Water Bore to ingredients for Thermal Water Extractor #290
  Bugfixes:
    - Fixed tech unlocks after adding Science Cost Tweaker mod mid game #260
    - Fixed duplicate starting items in rock-chest as well as player inventory #268
    - Basic Chemistry 2 tech missing green science #269
    - Fixed setting "SpaceX ignore tech price multiplier" #273
    - Removed Fuel pollution from fluids with no fuel value #280
---------------------------------------------------------------------------------------------------
Version: 0.5.11
Date: 06.06.2022
  Changes:
    - Science Cost Tweaker: #247
      - Purple and some military science intermediates are craftable in an Electronics assembling machine
      - Bio science can use productivity modules
      - Renamed Lab 2 to Exoplanetary Studies Lab
      - Changed recipe and energy consumption of Exoplanetary Studies Lab
    - Added missing tech prerequisites #252, #265
    - Added purple and yellow science packs to Radio Thermoelectric Generator tech #252
    - Renamed recipes and entities containing the word "coal" #252
    - When playing multiplayer, each player will get their own copy of the starting items. Home Rock will not spawn #259
    - Compatibility changes for Bob's mods 1.1.5 #262
  Bugfixes:
    - Lab 2 could not be researched (without SCT) #244
    - Error when using custom colors for tiers with Artisanal Reskins #251
    - Some disabled techs were not being hidden #252
    - Fixed setting "SpaceX ignore tech price multiplier" #256
    - Made SpaceX Drydock Assembly Component use modular roboports if regular roboports are disabled #261